# aocl-dlp

./: .clang-format  .gitignore  .pre-commit-config.yaml  BUILD.md  CMakeLists.txt  INSTALL.md  LICENSE  README.md
.github/workflows/: branch-name-check.yml
bench/: CMakeLists.txt  bench_gemm.cc
bench/classic/: CMakeLists.txt  bench_batch_lpgemm.c  bench_data_gen_lpgemm.py  bench_input.txt  bench_lpgemm.c  bench_lpgemm_eltwise_ops.c  bench_lpgemm_helpers.h  bench_lpgemm_sym_quant.c  (+2 more)
classic/: CMakeLists.txt  aocl_batch_gemm_bf16bf16f32of32.c  aocl_batch_gemm_bf16s4f32of32.c  aocl_batch_gemm_f32f32f32of32.c  aocl_batch_gemm_s8s8s32os32.c  aocl_batch_gemm_u8s8s32os32.c  aocl_eltwise_ops.c  aocl_gemm_bf16_utils.c  aocl_gemm_bf16bf16f32obf16.c  aocl_gemm_bf16bf16f32of32.c  aocl_gemm_bf16s4f32of32.c  aocl_gemm_f32f32f32of32.c  aocl_gemm_f32f32f32of32_utils.c  aocl_gemm_s8s8s32obf16.c  aocl_gemm_s8s8s32obf16_sym_quant.c  aocl_gemm_s8s8s32of32.c  aocl_gemm_s8s8s32of32_sym_quant.c  aocl_gemm_s8s8s32os32.c  aocl_gemm_s8s8s32os32_utils.c  aocl_gemm_s8s8s32os8.c  aocl_gemm_s8s8s32ou8.c  aocl_gemm_u8s4s32os32_utils.c  aocl_gemm_u8s8s32obf16.c  aocl_gemm_u8s8s32of32.c  aocl_gemm_u8s8s32os32.c  aocl_gemm_u8s8s32os32_utils.c  aocl_gemm_u8s8s32os8.c  aocl_gemm_u8s8s32ou8.c  aocl_util_l1_ops.c
classic/kernels/: CMakeLists.txt
classic/kernels/zen/: CMakeLists.txt  gelu_avx2.h  lpgemm_util_l1_ops_avx2.c  math_utils_avx2.h  sigmoid_avx2.h  silu_avx2.h
classic/kernels/zen/f32f32f32/: lpgemm_cvt_pack_bf16_f32_axv2.c  lpgemm_fringe_f32_avx2.c  lpgemm_kernel_macros_f32_avx2.h  lpgemm_m_kernel_f32_avx2.c  lpgemm_m_rd_fringe_f32_avx2.c  lpgemm_m_rd_kernel_f32_avx2.c  lpgemm_pack_a_f32_avx2.c  lpgemm_pack_b_f32_avx2.c  lpgemm_unpackb_bf16_to_f32_avx2.c  lpgemv_m_kernel_f32_avx2.c  lpgemv_n_kernel_f32_avx2.c
classic/kernels/zen4/: CMakeLists.txt  gelu_avx512.h  int4_utils_avx512.h  lpgemm_util_l1_ops_avx512.c  math_utils_avx512.h  sigmoid_avx512.h  silu_avx512.h
classic/kernels/zen4/bf16bf16f32/: lpgemm_6x64rowmajor_bf16_amd512vnni.c  lpgemm_6x64rowmajor_bf16s4f32of32_amd512vnni.c  lpgemm_eltwise_ops_6x64rowmajor_bf16_amd512vnni.c  lpgemm_eltwise_ops_m_fringe_bf16_amd512vnni.c  lpgemm_f32_kern_macros.h  lpgemm_m_fringe_bf16_amd512vnni.c  lpgemm_m_fringe_bf16s4f32of32_amd512vnni.c  lpgemm_mn_fringe_bf16_amd512vnni.c  lpgemm_mn_fringe_bf16s4f32of32_amd512vnni.c  lpgemm_n_fringe_bf16_amd512vnni.c  lpgemm_n_fringe_bf16s4f32of32_amd512vnni.c  lpgemm_packa_bf16_amd256vnni.c  lpgemm_packb_bf16_amd512vnni.c  lpgemm_packb_bf16_s4_amd512vnni.c  lpgemm_packb_f32_bf16_amd512vnni.c  lpgemm_packb_s4_to_bf16_amd512vnni.c  lpgemm_unpackb_bf16_amd512vnni.c  lpgemv_m_kernel_bf16_amd512vnni.c  lpgemv_n_kernel_bf16_amd512vnni.c
classic/kernels/zen4/f32f32f32/: lpgemm_eltwise_ops_fringe_f32_avx512.c  lpgemm_eltwise_ops_m_kernel_f32_avx512.c  lpgemm_fringe_f32_avx512.c  lpgemm_fringe_f32_avx512_256.c  lpgemm_kernel_macros_f32.h  lpgemm_m_kernel_f32_avx512.c  lpgemm_m_kernel_f32_avx512_256.c  lpgemm_m_rd_fringe_f32_avx512.c  lpgemm_m_rd_kernel_f32_avx512.c  lpgemm_pack_a_f32_amd512vnni.c  lpgemm_pack_b_f32_amd512vnni.c  lpgemv_m_kernel_f32_avx512.c  lpgemv_m_kernel_f32_avx512_256.c  lpgemv_n_kernel_f32_avx512.c  lpgemv_n_kernel_f32_avx512_256.c
classic/kernels/zen4/s8s8s32/: lpgemm_6x64rowmajor_s8_amd512vnni.c  lpgemm_6x64rowmajor_s8_grp_amd512vnni.c  lpgemm_m_fringe_s8_amd512vnni.c  lpgemm_m_fringe_s8_grp_amd512vnni.c  lpgemm_mn_fringe_s8_amd512vnni.c  lpgemm_mn_fringe_s8_grp_amd512vnni.c  lpgemm_n_fringe_s8_amd512vnni.c  lpgemm_n_fringe_s8_grp_amd512vnni.c  lpgemm_packa_s8_amd512vnni.c  lpgemm_packb_s8_amd512vnni.c  lpgemv_m_kernel_s8_amd512vnni.c  lpgemv_n_kernel_s8_amd512vnni.c
classic/kernels/zen4/u8s8s32/: lpgemm_6x64rowmajor_amd512vnni.c  lpgemm_m_fringe_amd512vnni.c  lpgemm_mn_fringe_amd512vnni.c  lpgemm_n_extMR_fringe_amd512vnni.c  lpgemm_n_fringe_amd512vnni.c  lpgemm_packa_amd512vnni.c  lpgemm_packb_amd512vnni.c  lpgemm_s32_kern_macros.h  lpgemm_s32_memcpy_macros.h  lpgemm_s32_pack_macros.h  lpgemv_m_kernel_amd512vnni.c  lpgemv_n_kernel_amd512vnni.c
cmake/: FindSphinx.cmake  aocl_dlp_config.h.in  dlp_compiler_flags_common.cmake  dlp_compiler_flags_linux.cmake  dlp_compiler_flags_windows.cmake  dlp_dependencies.cmake  dlp_documentation.cmake  dlp_extensions.cmake  dlp_install.cmake  dlp_options.cmake  dlp_platform.cmake  dlp_testing.cmake  dlp_variables.cmake
include/: aocl_dlp.h  aocl_gemm.h
scripts/: setup.sh
src/: CMakeLists.txt
tests/: CMakeLists.txt  test_framework.cc
(+213 files in other folders)
